# kneeseg

./: .gitignore  LICENSE  MANIFEST.in  README.md  mission.txt  publish.sh  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: python-package.yml
experiments/: README.md  README_old.md  inference.py  run_pipeline.py  train.py
kneeseg/: bone_rf.py  features.py  io.py  random_walker.py  registration.py  rf_seg.py  validate_config.py
kneeseg/configs/: config_schema.json  example_train_config.json  ski10_full_inference_config.json  ski10_full_train_config.json
kneeseg/data/: ski10_all_train_split.json  ski10_full_split.json
kneeseg/pipeline/: inference.py  train.py
kneeseg/tests/: test_core.py  test_features.py  test_io.py
tests/: test_bfloat16.py  test_compatibility_oai.py  test_validate_config.py
