[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kneeseg"
version = "0.1.3"
description = "A Python reimplementation of Semantic Context Forests for Learning-Based Knee Cartilage Segmentation in 3D MR Images"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "Quan Wang", email = "quanw@google.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "joblib",
    "tqdm",
    "SimpleITK"
]

[project.scripts]
kneeseg-pipeline = "kneeseg.pipeline.run:main"

[tool.setuptools.packages.find]
include = ["kneeseg*"]
exclude = ["experiments*"]
